--- a/web/index.html
+++ b/web/index.html
@@ -84,6 +84,8 @@
         <script src="dist/js/demo.js"></script>
         <!-- Chart.js -->
         <script src="plugins/chartjs/Chart.js"></script>
+        <!-- Flot.js -->
+        <script src="plugins/flot/jquery.flot.js"></script>
         
         <script type="text/javascript">
             $("#header").load('components/header/header.html');
